tests/ui/type-inference/or_else-multiple-type-params.stderr
error[E0282]: type annotations needed for `Result<Child, F>`
  --> $DIR/or_else-multiple-type-params.rs:7:18
   |
LL |         .or_else(|err| {
   |                  ^^^^^
   |
help: try giving this closure an explicit return type
   |
LL |         .or_else(|err| -> Result<Child, F> {
   |                        +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
